be/src/exprs/expr.cc
@@ -87,8 +87,8 @@ FunctionContext* Expr::RegisterFunctionContext(ExprContext* ctx, RuntimeState* s
   for (int i = 0; i < children_.size(); ++i) {
     arg_types.push_back(AnyValUtil::ColumnTypeToTypeDesc(children_[i]->type_));
   }
-  context_index_ = ctx->Register(state, return_type, arg_types, varargs_buffer_size);
-  return ctx->fn_context(context_index_);
+  fn_context_index_ = ctx->Register(state, return_type, arg_types, varargs_buffer_size);
+  return ctx->fn_context(fn_context_index_);
 }
 
 Expr::Expr(const ColumnType& type, bool is_slotref)
@@ -96,7 +96,7 @@ Expr::Expr(const ColumnType& type, bool is_slotref)
       is_slotref_(is_slotref),
       type_(type),
       output_scale_(-1),
-      context_index_(-1),
+      fn_context_index_(-1),
       ir_compute_fn_(NULL) {
 }
 
@@ -105,7 +105,7 @@ Expr::Expr(const TExprNode& node, bool is_slotref)
       is_slotref_(is_slotref),
       type_(ColumnType::FromThrift(node.type)),
       output_scale_(-1),
-      context_index_(-1),
+      fn_context_index_(-1),
       ir_compute_fn_(NULL) {
   if (node.__isset.fn) fn_ = node.fn;
 }
@@ -675,6 +675,17 @@ TimestampVal Expr::GetTimestampVal(ExprContext* context, TupleRow* row) {
 DecimalVal Expr::GetDecimalVal(ExprContext* context, TupleRow* row) {
   DCHECK(false) << DebugString();
   return DecimalVal::null();
+}
+
+bool Expr::FnContextHasError(ExprContext* ctx, const char** error_msg) {
+  if (fn_context_index_ != -1) {
+    FunctionContext* fn_ctx = ctx->fn_context(fn_context_index_);
+    if (fn_ctx->has_error()) {
+      if (error_msg) *error_msg = fn_ctx->error_msg();
+      return true;
+    }
+  }
+  return false;
 }
 
 }
