be/src/exprs/expr.h
@@ -147,6 +147,12 @@ class Expr {
 
   const std::vector<Expr*>& children() const { return children_; }
 
+  inline const int fn_context_index() { return fn_context_index_; }
+
+  /// Returns true and populates 'error_msg' if the function context associated with the
+  /// expr has an error set.
+  bool FnContextHasError(ExprContext* ctx, const char** error_msg);
+
   /// Returns true if GetValue(NULL) can be called on this expr and always returns the same
   /// result (e.g., exprs that don't contain slotrefs). The default implementation returns
   /// true if all children are constant.
@@ -320,7 +326,7 @@ class Expr {
   /// Index to pass to ExprContext::fn_context() to retrieve this expr's FunctionContext.
   /// Set in RegisterFunctionContext(). -1 if this expr does not need a FunctionContext and
   /// doesn't call RegisterFunctionContext().
-  int context_index_;
+  int fn_context_index_;
 
   /// Cached codegened compute function. Exprs should set this in GetCodegendComputeFn().
   llvm::Function* ir_compute_fn_;
@@ -329,7 +335,7 @@ class Expr {
   /// GetConstVal().
   boost::scoped_ptr<AnyVal> constant_val_;
 
-  /// Helper function that calls ctx->Register(), sets context_index_, and returns the
+  /// Helper function that calls ctx->Register(), sets fn_context_index_, and returns the
   /// registered FunctionContext.
   FunctionContext* RegisterFunctionContext(
       ExprContext* ctx, RuntimeState* state, int varargs_buffer_size = 0);
