be/src/exprs/scalar-fn-call.cc
@@ -81,7 +81,7 @@ Status ScalarFnCall::Prepare(RuntimeState* state, const RowDescriptor& desc,
     }
   }
 
-  context_index_ = context->Register(state, return_type, arg_types, varargs_buffer_size);
+  fn_context_index_ = context->Register(state, return_type, arg_types, varargs_buffer_size);
 
   // If the codegen object hasn't been created yet and we're calling a builtin or native
   // UDF with <= 8 non-variadic arguments, we can use the interpreted path and call the
@@ -149,7 +149,7 @@ Status ScalarFnCall::Open(RuntimeState* state, ExprContext* ctx,
                           FunctionContext::FunctionStateScope scope) {
   // Opens and inits children
   RETURN_IF_ERROR(Expr::Open(state, ctx, scope));
-  FunctionContext* fn_ctx = ctx->fn_context(context_index_);
+  FunctionContext* fn_ctx = ctx->fn_context(fn_context_index_);
 
   if (scalar_fn_ != NULL) {
     // We're in the interpreted path (i.e. no JIT). Populate our FunctionContext's
@@ -167,6 +167,11 @@ Status ScalarFnCall::Open(RuntimeState* state, ExprContext* ctx,
     vector<AnyVal*> constant_args;
     for (int i = 0; i < children_.size(); ++i) {
       constant_args.push_back(children_[i]->GetConstVal(ctx));
+      // Check if any errors were set during the GetConstVal() call
+      const char* child_error_msg;
+      if (children_[i]->FnContextHasError(ctx, &child_error_msg)) {
+        return Status(child_error_msg);
+      }
     }
     fn_ctx->impl()->SetConstantArgs(constant_args);
   }
@@ -197,8 +202,8 @@ Status ScalarFnCall::Open(RuntimeState* state, ExprContext* ctx,
 
 void ScalarFnCall::Close(RuntimeState* state, ExprContext* context,
                          FunctionContext::FunctionStateScope scope) {
-  if (context_index_ != -1 && close_fn_ != NULL) {
-    FunctionContext* fn_ctx = context->fn_context(context_index_);
+  if (fn_context_index_ != -1 && close_fn_ != NULL) {
+    FunctionContext* fn_ctx = context->fn_context(fn_context_index_);
 
     close_fn_(fn_ctx, FunctionContext::THREAD_LOCAL);
     if (scope == FunctionContext::FRAGMENT_LOCAL) {
@@ -278,7 +283,7 @@ Status ScalarFnCall::GetCodegendComputeFn(RuntimeState* state, llvm::Function** 
   llvm::Value* fn_ctxs_base = builder.CreateLoad(expr_ctx_gep, "fn_ctxs_base");
   // Use GEP to add our index to the base pointer
   llvm::Value* fn_ctx_ptr =
-      builder.CreateConstGEP1_32(fn_ctxs_base, context_index_, "fn_ctx_ptr");
+      builder.CreateConstGEP1_32(fn_ctxs_base, fn_context_index_, "fn_ctx_ptr");
   llvm::Value* fn_ctx = builder.CreateLoad(fn_ctx_ptr, "fn_ctx");
   udf_args.push_back(fn_ctx);
 
@@ -506,7 +511,7 @@ Status ScalarFnCall::GetFunction(RuntimeState* state, const string& symbol, void
 void ScalarFnCall::EvaluateChildren(ExprContext* context, TupleRow* row,
                                     vector<AnyVal*>* input_vals) {
   DCHECK_EQ(input_vals->size(), NumFixedArgs());
-  FunctionContext* fn_ctx = context->fn_context(context_index_);
+  FunctionContext* fn_ctx = context->fn_context(fn_context_index_);
   uint8_t* varargs_buffer = fn_ctx->impl()->varargs_buffer();
   for (int i = 0; i < children_.size(); ++i) {
     void* src_slot = context->GetValue(children_[i], row);
@@ -524,7 +529,7 @@ void ScalarFnCall::EvaluateChildren(ExprContext* context, TupleRow* row,
 template<typename RETURN_TYPE>
 RETURN_TYPE ScalarFnCall::InterpretEval(ExprContext* context, TupleRow* row) {
   DCHECK(scalar_fn_ != NULL);
-  FunctionContext* fn_ctx = context->fn_context(context_index_);
+  FunctionContext* fn_ctx = context->fn_context(fn_context_index_);
   vector<AnyVal*>* input_vals = fn_ctx->impl()->staging_input_vals();
   EvaluateChildren(context, row, input_vals);
 
